--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-data-table-component": "^7.5.1",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
